package in_myfiles.creational_pattern.singleton

enum class SearchType {
    LOCAL, CLOUD
}